@@ -35,7 +35,7 @@ import com.emc.storageos.vplex.api.clientdata.VolumeInfo;
  * Test client for VPlex API.
  */
 public class VPlexApiTest {
-    
+
     // Properties file name
     private static final String PROP_FILE_NAME = "/com/emc/storageos/vplex/api/VPlexApiTest.properties";
     // Properties file for vplex credentials.
@@ -44,12 +44,11 @@ public class VPlexApiTest {
     // Property keys
     private static final String VPLEX_VERSION_KEY = "VPLEX_VERSION";
 
-    
     private static final String VPLEX_PROVIDER_IP = EnvConfig.get(UNIT_TEST_CONFIG_FILE, "vplex.host.ipaddress");
     private static final String VPLEX_PROVIDER_PORT = EnvConfig.get(UNIT_TEST_CONFIG_FILE, "vplex.host.port");
     private static final String VPLEX_PROVIDER_USER = EnvConfig.get(UNIT_TEST_CONFIG_FILE, "vplex.host.username");
     private static final String VPLEX_PROVIDER_PWD = EnvConfig.get(UNIT_TEST_CONFIG_FILE, "vplex.host.password");
-    
+
     private static final String CONNECTED_SYSTEMS_PROP_KEY = "CONNECTED_SYSTEMS";
     private static final String SIMPLE_VV_INFO_PROP_KEY = "SIMPLE_VIRTUAL_VOLUME_TEST";
     private static final String DISTRIBUTED_VV_INFO_PROP_KEY = "DISTRIBUTED_VIRTUAL_VOLUME_TEST";
@@ -60,16 +59,16 @@ public class VPlexApiTest {
     private static final String SIMPLE_MIGRATION_VV_INFO_PROP_KEY = "SIMPLE_MIGRATION_VIRTUAL_VOLUME_TEST";
     private static final String MIGRATION_NAME_PROP_KEY = "MIGRATION_NAME";
     private static final String DEVICE_MIRROR_TEST_VOLUME_PROP_KEY = "DEVICE_MIRROR_TEST_VOLUME";
-    
+
     // The configuration properties for the test.
     private static Properties _properties = new Properties();
-    
+
     // Factory used to create and manage client connections;
-    private static VPlexApiFactory _apiFactory = null;
+    private static volatile VPlexApiFactory _apiFactory = null;
 
     // The VPlex API client used to make http requests to the VPlex.
-    private static VPlexApiClient _client = null;
-    
+    private static volatile VPlexApiClient _client = null;
+
     // The native guids for the arrays attached to the VPlex
     private static final List<String> _attachedStorageSystems = new ArrayList<String>();
 
@@ -98,9 +97,9 @@ public class VPlexApiTest {
 
             // Setup the list of storage systems attached to the VPlex.
             String connectedStorageSystemInfo = _properties
-                .getProperty(CONNECTED_SYSTEMS_PROP_KEY);
+                    .getProperty(CONNECTED_SYSTEMS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(connectedStorageSystemInfo,
-                ",");
+                    ",");
             while (tokenizer.hasMoreTokens()) {
                 String storageSystemGuid = tokenizer.nextToken();
                 _attachedStorageSystems.add(storageSystemGuid);
@@ -110,7 +109,7 @@ public class VPlexApiTest {
             Assert.assertTrue(false);
         }
     }
-    
+
     /**
      * Tests the virtual volume deep discovery
      */
@@ -134,7 +133,7 @@ public class VPlexApiTest {
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the virtual volume deep discovery
      */
@@ -178,9 +177,9 @@ public class VPlexApiTest {
         boolean wasException = false;
         try {
             List<VPlexStorageSystemInfo> storageSystemInfoList = _client
-                .getStorageSystemInfo();
+                    .getStorageSystemInfo();
             Assert.assertTrue(storageSystemInfoList.size() == _attachedStorageSystems
-                .size());
+                    .size());
             for (VPlexStorageSystemInfo storageSystemInfo : storageSystemInfoList) {
                 boolean foundAMatch = false;
                 for (String nativeGuid : _attachedStorageSystems) {
@@ -196,7 +195,7 @@ public class VPlexApiTest {
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the API getPortInfo, which gets the information about the
      * director ports in the VPlex engines.
@@ -226,15 +225,15 @@ public class VPlexApiTest {
      * Tests the API rediscoverStorageSystems. Test sleeps a bit at the end
      * to ensure the rediscover call does not interfere with subsequent tests.
      * 
-     * @throws InterruptedException If an error occurs during the sleep. 
+     * @throws InterruptedException If an error occurs during the sleep.
      */
     @Test
     public void testRediscoverStorageSystems() throws InterruptedException {
         boolean wasException = false;
         try {
             List<VPlexStorageSystemInfo> storageSystemInfoList = _client
-                .getStorageSystemInfo();
-            Assert.assertTrue(storageSystemInfoList.size() != 0);
+                    .getStorageSystemInfo();
+            Assert.assertTrue(!storageSystemInfoList.isEmpty());
             List<String> storageSystemNativeGuids = new ArrayList<String>();
             for (VPlexStorageSystemInfo storageSystemInfo : storageSystemInfoList) {
                 storageSystemNativeGuids.add(storageSystemInfo.getUniqueId());
@@ -244,18 +243,18 @@ public class VPlexApiTest {
             wasException = true;
         }
         Assert.assertFalse(wasException);
-        
+
         // Let rediscover finish, which can interfere with subsequent tests.
         Thread.sleep(2000);
     }
-    
+
     /**
      * Tests the API createVirtualVolume when only a single storage volume
      * is passed, thereby creating a simple virtual volume on one cluster
      * of the VPlex.
      */
     @Test
-    public void testCreateVirtualVolume_Simple() {
+    public void testCreateVirtualVolumeSimple() {
         boolean wasException = false;
         try {
             // Create the virtual volume.
@@ -282,14 +281,14 @@ public class VPlexApiTest {
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the API createVirtualVolume when multiple storage volumes
      * are passed, thereby creating a distributed virtual volume on the
      * VPlex.
      */
     @Test
-    public void testCreateVirtualVolume_Distributed() {
+    public void testCreateVirtualVolumeDistributed() {
         boolean wasException = false;
         try {
             // Create the distributed virtual volume.
@@ -312,7 +311,7 @@ public class VPlexApiTest {
             }
             vvNameBuilder.append(VPlexApiConstants.VIRTUAL_VOLUME_SUFFIX);
             VPlexVirtualVolumeInfo vvInfo = _client.createVirtualVolume(
-                nativeVolumeInfoList, true, false, false, "1");
+                    nativeVolumeInfoList, true, false, false, "1");
             Assert.assertNotNull(vvInfo);
             Assert.assertEquals(vvNameBuilder.toString(), vvInfo.getName());
 
@@ -323,17 +322,17 @@ public class VPlexApiTest {
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the API createStorageView when the view name is not specified.
      */
     @Test
-    public void testCreateStorageView_NoViewName() {
+    public void testCreateStorageViewNoViewName() {
 
         // Get the target ports
         List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
         String storageViewTargetsStr = _properties
-            .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
         StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
         while (tokenizer.hasMoreTokens()) {
             String portWWN = tokenizer.nextToken();
@@ -344,7 +343,7 @@ public class VPlexApiTest {
         // Test with a null view name.
         boolean wasException = false;
         try {
-            Assert.assertTrue(targetPortInfoList.size() > 0);
+            Assert.assertTrue(!targetPortInfoList.isEmpty());
             _client.createStorageView(null, targetPortInfoList, null, null);
         } catch (VPlexApiException vae) {
             wasException = true;
@@ -354,7 +353,7 @@ public class VPlexApiTest {
         // Test with a blank view name.
         wasException = false;
         try {
-            Assert.assertTrue(targetPortInfoList.size() > 0);
+            Assert.assertTrue(!targetPortInfoList.isEmpty());
             _client.createStorageView("", targetPortInfoList, null, null);
         } catch (VPlexApiException vae) {
             wasException = true;
@@ -364,19 +363,19 @@ public class VPlexApiTest {
         // Test with a view name consisting only of white space.
         wasException = false;
         try {
-            Assert.assertTrue(targetPortInfoList.size() > 0);
+            Assert.assertTrue(!targetPortInfoList.isEmpty());
             _client.createStorageView(" ", targetPortInfoList, null, null);
         } catch (VPlexApiException vae) {
             wasException = true;
         }
         Assert.assertTrue(wasException);
     }
-    
+
     /**
      * Tests the API createStorageView when no targets are specified.
      */
     @Test
-    public void testCreateStorageView_NoTargets() {
+    public void testCreateStorageViewNoTargets() {
 
         // Get the storage view name
         String storageViewName = _properties.getProperty(STORAGE_VIEW_NAME_PROP_KEY);
@@ -387,7 +386,7 @@ public class VPlexApiTest {
             Assert.assertNotNull(storageViewName);
             Assert.assertTrue(storageViewName.trim().length() != 0);
             _client.createStorageView(storageViewName, new ArrayList<PortInfo>(), null,
-                null);
+                    null);
         } catch (VPlexApiException vae) {
             wasException = true;
         }
@@ -399,7 +398,7 @@ public class VPlexApiTest {
      * in the request.
      */
     @Test
-    public void testCreateStorageView_TargetsOnly() {
+    public void testCreateStorageViewTargetsOnly() {
         boolean wasException = false;
         try {
             // Get the storage view name
@@ -408,7 +407,7 @@ public class VPlexApiTest {
             // Get the target ports
             List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
             String storageViewTargetsStr = _properties
-                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -418,34 +417,34 @@ public class VPlexApiTest {
 
             // Create the storage view
             VPlexStorageViewInfo storageViewInfo = _client.createStorageView(
-                storageViewName, targetPortInfoList, null, null);
+                    storageViewName, targetPortInfoList, null, null);
             Assert.assertNotNull(storageViewInfo);
             Assert.assertEquals(storageViewInfo.getName(), storageViewName);
 
             // Cleanup
-            Boolean[] viewFound = new Boolean[] {new Boolean(false)};
+            Boolean[] viewFound = new Boolean[] { new Boolean(false) };
             _client.deleteStorageView(storageViewName, viewFound);
         } catch (Exception e) {
             wasException = true;
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the API createStorageView when both target ports and virtual
      * volumes are passed in the request.
      */
     @Test
-    public void testCreateStorageView_WithVolumes() {
+    public void testCreateStorageViewWithVolumes() {
         boolean wasException = false;
         try {
             // Get the storage view name
             String storageViewName = _properties.getProperty(STORAGE_VIEW_NAME_PROP_KEY);
-            
+
             // Get the target ports
             List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
             String storageViewTargetsStr = _properties
-                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -457,16 +456,16 @@ public class VPlexApiTest {
             VPlexVirtualVolumeInfo vvInfo = createSimpleVirtualVolume();
             Assert.assertNotNull(vvInfo);
             Map<String, Integer> vvMap = new HashMap<String, Integer>();
-            vvMap.put(vvInfo.getName(), new Integer(VPlexApiConstants.LUN_UNASSIGNED));
+            vvMap.put(vvInfo.getName(), Integer.valueOf(VPlexApiConstants.LUN_UNASSIGNED));
 
             // Create the storage view
             VPlexStorageViewInfo storageViewInfo = _client.createStorageView(
-                storageViewName, targetPortInfoList, null, vvMap);
+                    storageViewName, targetPortInfoList, null, vvMap);
             Assert.assertNotNull(storageViewInfo);
             Assert.assertEquals(storageViewInfo.getName(), storageViewName);
 
             // Cleanup
-            Boolean[] viewFound = new Boolean[] {new Boolean(false)};
+            Boolean[] viewFound = new Boolean[] { new Boolean(false) };
             _client.deleteStorageView(storageViewName, viewFound);
             _client.deleteVirtualVolume(vvInfo.getName(), true, false);
         } catch (Exception e) {
@@ -474,22 +473,22 @@ public class VPlexApiTest {
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the API createStorageView when target ports, initiator ports, and
      * virtual volumes are passed in the request.
      */
     @Test
-    public void testCreateStorageView_WithInitiatorsAndVolumes() {
+    public void testCreateStorageViewWithInitiatorsAndVolumes() {
         boolean wasException = false;
         try {
             // Get the storage view name
             String storageViewName = _properties.getProperty(STORAGE_VIEW_NAME_PROP_KEY);
-            
+
             // Get the target ports
             List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
             String storageViewTargetsStr = _properties
-                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -500,7 +499,7 @@ public class VPlexApiTest {
             // Get the initiator ports
             List<PortInfo> initiatorPortInfoList = new ArrayList<PortInfo>();
             String storageViewInitiatorsStr = _properties
-                .getProperty(STORAGE_VIEW_INITIATORS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_INITIATORS_PROP_KEY);
             tokenizer = new StringTokenizer(storageViewInitiatorsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -512,16 +511,16 @@ public class VPlexApiTest {
             VPlexVirtualVolumeInfo vvInfo = createSimpleVirtualVolume();
             Assert.assertNotNull(vvInfo);
             Map<String, Integer> vvMap = new HashMap<String, Integer>();
-            vvMap.put(vvInfo.getName(), new Integer(VPlexApiConstants.LUN_UNASSIGNED));
+            vvMap.put(vvInfo.getName(), Integer.valueOf(VPlexApiConstants.LUN_UNASSIGNED));
 
             // Create the storage view
             VPlexStorageViewInfo storageViewInfo = _client.createStorageView(
-                storageViewName, targetPortInfoList, initiatorPortInfoList, vvMap);
+                    storageViewName, targetPortInfoList, initiatorPortInfoList, vvMap);
             Assert.assertNotNull(storageViewInfo);
             Assert.assertEquals(storageViewInfo.getName(), storageViewName);
 
             // Cleanup
-            Boolean[] viewFound = new Boolean[] {new Boolean(false)};
+            Boolean[] viewFound = new Boolean[] { new Boolean(false) };
             _client.deleteStorageView(storageViewName, viewFound);
             _client.deleteVirtualVolume(vvInfo.getName(), true, false);
             _client.getExportManager().unregisterInitiators(initiatorPortInfoList);
@@ -529,8 +528,8 @@ public class VPlexApiTest {
             wasException = true;
         }
         Assert.assertFalse(wasException);
-    }    
-    
+    }
+
     /**
      * Tests the API addVirtualVolumesToStorageView.
      */
@@ -544,7 +543,7 @@ public class VPlexApiTest {
             // Get the target ports
             List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
             String storageViewTargetsStr = _properties
-                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -554,21 +553,21 @@ public class VPlexApiTest {
 
             // Create the storage view
             VPlexStorageViewInfo storageViewInfo = _client.createStorageView(
-                storageViewName, targetPortInfoList, null, null);
+                    storageViewName, targetPortInfoList, null, null);
             Assert.assertNotNull(storageViewInfo);
             Assert.assertEquals(storageViewInfo.getName(), storageViewName);
-            
+
             // Create a virtual volume.
             VPlexVirtualVolumeInfo vvInfo = createSimpleVirtualVolume();
             Assert.assertNotNull(vvInfo);
             Map<String, Integer> vvMap = new HashMap<String, Integer>();
-            vvMap.put(vvInfo.getName(), new Integer(VPlexApiConstants.LUN_UNASSIGNED));
-            
+            vvMap.put(vvInfo.getName(), Integer.valueOf(VPlexApiConstants.LUN_UNASSIGNED));
+
             // Add the virtual volume to the storage view.
             _client.addVirtualVolumesToStorageView(storageViewName, vvMap);
 
             // Cleanup
-            Boolean[] viewFound = new Boolean[] {new Boolean(false)};
+            Boolean[] viewFound = new Boolean[] { new Boolean(false) };
             _client.deleteStorageView(storageViewName, viewFound);
             _client.deleteVirtualVolume(vvInfo.getName(), true, false);
         } catch (Exception e) {
@@ -586,11 +585,11 @@ public class VPlexApiTest {
         try {
             // Get the storage view name
             String storageViewName = _properties.getProperty(STORAGE_VIEW_NAME_PROP_KEY);
-            
+
             // Get the target ports
             List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
             String storageViewTargetsStr = _properties
-                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -602,21 +601,21 @@ public class VPlexApiTest {
             VPlexVirtualVolumeInfo vvInfo = createSimpleVirtualVolume();
             Assert.assertNotNull(vvInfo);
             Map<String, Integer> vvMap = new HashMap<String, Integer>();
-            vvMap.put(vvInfo.getName(), new Integer(VPlexApiConstants.LUN_UNASSIGNED));
+            vvMap.put(vvInfo.getName(), Integer.valueOf(VPlexApiConstants.LUN_UNASSIGNED));
 
             // Create the storage view
             VPlexStorageViewInfo storageViewInfo = _client.createStorageView(
-                storageViewName, targetPortInfoList, null, vvMap);
+                    storageViewName, targetPortInfoList, null, vvMap);
             Assert.assertNotNull(storageViewInfo);
             Assert.assertEquals(storageViewInfo.getName(), storageViewName);
-            
+
             // Remove the virtual volume from the storage view.
             List<String> vvNames = new ArrayList<String>();
             vvNames.addAll(vvMap.keySet());
             _client.removeVirtualVolumesFromStorageView(storageViewName, vvNames);
 
             // Cleanup
-            Boolean[] viewFound = new Boolean[] {new Boolean(false)};
+            Boolean[] viewFound = new Boolean[] { new Boolean(false) };
             _client.deleteStorageView(storageViewName, viewFound);
             _client.deleteVirtualVolume(vvInfo.getName(), true, false);
         } catch (Exception e) {
@@ -624,7 +623,7 @@ public class VPlexApiTest {
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the API addInitiatorsToStorageView.
      */
@@ -638,7 +637,7 @@ public class VPlexApiTest {
             // Get the target ports
             List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
             String storageViewTargetsStr = _properties
-                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -648,33 +647,33 @@ public class VPlexApiTest {
 
             // Create the storage view
             VPlexStorageViewInfo storageViewInfo = _client.createStorageView(
-                storageViewName, targetPortInfoList, null, null);
+                    storageViewName, targetPortInfoList, null, null);
             Assert.assertNotNull(storageViewInfo);
             Assert.assertEquals(storageViewInfo.getName(), storageViewName);
-            
+
             // Get the initiator ports
             List<PortInfo> initiatorPortInfoList = new ArrayList<PortInfo>();
             String storageViewInitiatorsStr = _properties
-                .getProperty(STORAGE_VIEW_INITIATORS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_INITIATORS_PROP_KEY);
             tokenizer = new StringTokenizer(storageViewInitiatorsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
                 PortInfo initiatorPortInfo = new PortInfo(portWWN);
                 initiatorPortInfoList.add(initiatorPortInfo);
-            }            
-            
+            }
+
             // Add the initiators to the storage view.
             _client.addInitiatorsToStorageView(storageViewName, initiatorPortInfoList);
 
             // Cleanup
-            Boolean[] viewFound = new Boolean[] {new Boolean(false)};
+            Boolean[] viewFound = new Boolean[] { new Boolean(false) };
             _client.deleteStorageView(storageViewName, viewFound);
             _client.getExportManager().unregisterInitiators(initiatorPortInfoList);
         } catch (Exception e) {
             wasException = true;
         }
         Assert.assertFalse(wasException);
-    }    
+    }
 
     /**
      * Tests the API removeInitiatorFromStorageView.
@@ -685,22 +684,22 @@ public class VPlexApiTest {
         try {
             // Get the storage view name
             String storageViewName = _properties.getProperty(STORAGE_VIEW_NAME_PROP_KEY);
-            
+
             // Get the target ports
             List<PortInfo> targetPortInfoList = new ArrayList<PortInfo>();
             String storageViewTargetsStr = _properties
-                .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_TARGETS_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(storageViewTargetsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
                 PortInfo targetPortInfo = new PortInfo(portWWN);
                 targetPortInfoList.add(targetPortInfo);
             }
-            
+
             // Get the initiator ports
             List<PortInfo> initiatorPortInfoList = new ArrayList<PortInfo>();
             String storageViewInitiatorsStr = _properties
-                .getProperty(STORAGE_VIEW_INITIATORS_PROP_KEY);
+                    .getProperty(STORAGE_VIEW_INITIATORS_PROP_KEY);
             tokenizer = new StringTokenizer(storageViewInitiatorsStr, ",");
             while (tokenizer.hasMoreTokens()) {
                 String portWWN = tokenizer.nextToken();
@@ -710,15 +709,15 @@ public class VPlexApiTest {
 
             // Create the storage view
             VPlexStorageViewInfo storageViewInfo = _client.createStorageView(
-                storageViewName, targetPortInfoList, initiatorPortInfoList, null);
+                    storageViewName, targetPortInfoList, initiatorPortInfoList, null);
             Assert.assertNotNull(storageViewInfo);
             Assert.assertEquals(storageViewInfo.getName(), storageViewName);
-            
+
             // Remove the initiators from the storage view.
             _client.removeInitiatorsFromStorageView(storageViewName, initiatorPortInfoList);
 
             // Cleanup
-            Boolean[] viewFound = new Boolean[] {new Boolean(false)};
+            Boolean[] viewFound = new Boolean[] { new Boolean(false) };
             _client.deleteStorageView(storageViewName, viewFound);
             _client.getExportManager().unregisterInitiators(initiatorPortInfoList);
         } catch (Exception e) {
@@ -726,12 +725,12 @@ public class VPlexApiTest {
         }
         Assert.assertFalse(wasException);
     }
-    
+
     /**
      * Tests the API migrateVirtualVolume for a simple virtual volume.
      */
     @Test
-    public void testMigrateVirtualVolume_Simple() {
+    public void testMigrateVirtualVolumeSimple() {
 
         boolean wasException = false;
         try {
@@ -757,13 +756,13 @@ public class VPlexApiTest {
             // Migrate the virtual volume
             List<VolumeInfo> nativeVolumeInfoList = new ArrayList<VolumeInfo>();
             String migrationVolumeInfo = _properties
-                .getProperty(SIMPLE_MIGRATION_VV_INFO_PROP_KEY);
+                    .getProperty(SIMPLE_MIGRATION_VV_INFO_PROP_KEY);
             StringTokenizer volumeInfoTokenizer = new StringTokenizer(migrationVolumeInfo, ",");
             systemGuid = volumeInfoTokenizer.nextToken();
             String volumeId = volumeInfoTokenizer.nextToken();
             volumeNativeId = volumeInfoTokenizer.nextToken();
             nativeVolumeInfoList.add(new VolumeInfo(systemGuid, "vmax", volumeId,
-                volumeNativeId, false));
+                    volumeNativeId, false));
             vvNameBuilder = new StringBuilder();
             vvNameBuilder.append(VPlexApiConstants.DEVICE_PREFIX);
             vvNameBuilder.append(VPlexApiConstants.VOLUME_NAME_PREFIX);
@@ -774,9 +773,13 @@ public class VPlexApiTest {
 
             String migrationName = _properties.getProperty(MIGRATION_NAME_PROP_KEY);
             List<VPlexMigrationInfo> migrationInfoList = _client.migrateVirtualVolume(
+<<<<<<< HEAD
                 migrationName, vvName, nativeVolumeInfoList, false, false, false, true, null);
+=======
+                    migrationName, vvName, nativeVolumeInfoList, false, false, false, true);
+>>>>>>> master
             Assert.assertEquals(migrationInfoList.size(), 1);
-            
+
             // Wait until migrations complete and commit the migrations with
             // automatic clean and remove.
             Thread.sleep(15000);
@@ -786,7 +789,7 @@ public class VPlexApiTest {
             }
             migrationInfoList = _client.commitMigrations(migrationNames, true, true, true);
             Assert.assertEquals(migrationInfoList.size(), 1);
-            
+
             // Clean up the virtual volume.
             vvInfo = migrationInfoList.get(0).getVirtualVolumeInfo();
             Assert.assertEquals(vvNameBuilder.toString(), vvInfo.getName());
@@ -801,13 +804,13 @@ public class VPlexApiTest {
      * Tests the API migrateVirtualVolume for a distributed virtual volume.
      */
     @Test
-    public void testMigrateVirtualVolume_Distributed() {
+    public void testMigrateVirtualVolumeDistributed() {
 
         boolean wasException = false;
         try {
             // Create the distributed virtual volume.
             StringBuilder vvNameBuilder = new StringBuilder(
-                VPlexApiConstants.DIST_DEVICE_PREFIX);
+                    VPlexApiConstants.DIST_DEVICE_PREFIX);
             List<VolumeInfo> nativeVolumeInfoList = new ArrayList<VolumeInfo>();
             String distVolumeInfo = _properties.getProperty(DISTRIBUTED_VV_INFO_PROP_KEY);
             StringTokenizer tokenizer = new StringTokenizer(distVolumeInfo, "::");
@@ -818,7 +821,7 @@ public class VPlexApiTest {
                 String volumeId = volumeInfoTokenizer.nextToken();
                 String volumeNativeId = volumeInfoTokenizer.nextToken();
                 nativeVolumeInfoList.add(new VolumeInfo(systemGuid, "vmax", volumeId,
-                    volumeNativeId, false));
+                        volumeNativeId, false));
                 vvNameBuilder.append(VPlexApiConstants.DIST_DEVICE_NAME_DELIM);
                 vvNameBuilder.append(VPlexApiConstants.VOLUME_NAME_PREFIX);
                 vvNameBuilder.append(systemGuid.substring(systemGuid.indexOf("+") + 1));
@@ -828,16 +831,16 @@ public class VPlexApiTest {
             vvNameBuilder.append(VPlexApiConstants.VIRTUAL_VOLUME_SUFFIX);
             String vvName = vvNameBuilder.toString();
             VPlexVirtualVolumeInfo vvInfo = _client.createVirtualVolume(
-                nativeVolumeInfoList, true, false, false, "1");
+                    nativeVolumeInfoList, true, false, false, "1");
             Assert.assertNotNull(vvInfo);
             Assert.assertEquals(vvName, vvInfo.getName());
 
             // Migrate the virtual volume
             vvNameBuilder = new StringBuilder(
-                VPlexApiConstants.DIST_DEVICE_PREFIX);
+                    VPlexApiConstants.DIST_DEVICE_PREFIX);
             nativeVolumeInfoList.clear();
             String migrationVolumeInfo = _properties
-                .getProperty(MIGRATION_VV_INFO_PROP_KEY);
+                    .getProperty(MIGRATION_VV_INFO_PROP_KEY);
             tokenizer = new StringTokenizer(migrationVolumeInfo, "::");
             while (tokenizer.hasMoreTokens()) {
                 String volumeInfo = tokenizer.nextToken();
@@ -846,7 +849,7 @@ public class VPlexApiTest {
                 String volumeId = volumeInfoTokenizer.nextToken();
                 String volumeNativeId = volumeInfoTokenizer.nextToken();
                 nativeVolumeInfoList.add(new VolumeInfo(systemGuid, "vmax", volumeId,
-                    volumeNativeId, false));
+                        volumeNativeId, false));
                 vvNameBuilder.append(VPlexApiConstants.DIST_DEVICE_NAME_DELIM);
                 vvNameBuilder.append(VPlexApiConstants.VOLUME_NAME_PREFIX);
                 vvNameBuilder.append(systemGuid.substring(systemGuid.indexOf("+") + 1));
@@ -856,10 +859,15 @@ public class VPlexApiTest {
             vvNameBuilder.append(VPlexApiConstants.VIRTUAL_VOLUME_SUFFIX);
             String migrationName = _properties.getProperty(MIGRATION_NAME_PROP_KEY);
             List<VPlexMigrationInfo> migrationInfoList = _client.migrateVirtualVolume(
+<<<<<<< HEAD
                 migrationName, vvName, nativeVolumeInfoList, false, false, false,
                 true, null);
+=======
+                    migrationName, vvName, nativeVolumeInfoList, false, false, false,
+                    true);
+>>>>>>> master
             Assert.assertEquals(migrationInfoList.size(), 2);
-            
+
             // Wait until migrations complete and commit the migrations with
             // automatic clean and remove.
             Thread.sleep(15000);
@@ -869,8 +877,8 @@ public class VPlexApiTest {
             }
             migrationInfoList = _client.commitMigrations(migrationNames, true, true, true);
             Assert.assertEquals(migrationInfoList.size(), 2);
-            
-            // Clean up the virtual volume. Use the second one as it will have the 
+
+            // Clean up the virtual volume. Use the second one as it will have the
             // fully update virtual volume name.
             vvInfo = migrationInfoList.get(1).getVirtualVolumeInfo();
             Assert.assertEquals(vvNameBuilder.toString(), vvInfo.getName());
@@ -912,10 +920,13 @@ public class VPlexApiTest {
                     _client.deleteVirtualVolume(vvInfo.getName(), true, false);
                 }
             } catch (Exception exx) {
+                // ignoring exceptions
+                System.out.println("an ignorable exception was encountered: "
+                        + exx.getLocalizedMessage());
             }
         }
     }
-    
+
     /**
      * Creates a simple virtual volume from one storage volume.
      * 
@@ -931,10 +942,10 @@ public class VPlexApiTest {
         String volumeNativeId = tokenizer.nextToken();
         List<VolumeInfo> nativeVolumeInfoList = new ArrayList<VolumeInfo>();
         VolumeInfo nativeVolumeInfo = new VolumeInfo(storageSystemGuid, "vmax", volumeId,
-            volumeNativeId, false);
+                volumeNativeId, false);
         nativeVolumeInfoList.add(nativeVolumeInfo);
         VPlexVirtualVolumeInfo vvInfo = _client.createVirtualVolume(
-            nativeVolumeInfoList, false, false, false, null);
+                nativeVolumeInfoList, false, false, false, null);
         return vvInfo;
     }
 }
